--- a/12-Key-Sequence-Detection/index.html
+++ b/12-Key-Sequence-Detection/index.html
@@ -28,7 +28,7 @@
       margin-bottom: 10px;
     }
     .correct {
-      color: green;
+      color: #36ff3c;
     }
     .incorrect {
       color: red;
